fix(radio-button): prevent radio distortion

--- a/src/components/reusable/radioButton/radioButton.scss
+++ b/src/components/reusable/radioButton/radioButton.scss
@@ -21,6 +21,7 @@ input {
   order: 0;
   -webkit-appearance: none;
   appearance: none;
+  flex-shrink: 0;
   display: inline-flex;
   align-items: center;
   justify-content: center;
